--- a/templates/BasicSettings.html
+++ b/templates/BasicSettings.html
@@ -9,7 +9,7 @@
     </head>
     <body>  
         <div class="sidenav"> 
-            <a class="invert" href="{{ url_for('flaskRoute.display_logs') }}"> LOGS </a>
+            <a class="navbutton" href="{{ url_for('flaskRoute.display_logs') }}"> LOGS </a>
         </div> 
     <div class="wrapper">  
         <header>
@@ -179,4 +179,5 @@
         </footer>
     </div> 
     </body>
+
 </html>
